--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 <body>
     <!--Header-->
-    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12"  id="header" >
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 header">
         <div class="container1">
             <div class="row">
                 <!--Left Itens-->
                 <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
                     <center>
-                        <img src="/images/logo.png" id="toplogo">
+                        <img src="/images/logo.png" class="toplogo">
                     </center>
                 </div>
                 <!--Middle Itens-->
@@ -38,6 +38,16 @@
             </div>
         </div>        
     </div>
+
     <!--Top-->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 top text-center">
+        <div class="container">
+            <div class="row">               
+                <div class="col align-self-center">
+                    <h1>Genetic &nbsp &nbsp &nbsp &nbsp &nbsp <br> &nbsp &nbsp &nbsp &nbsp &nbsp Testing</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
