--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genetic Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="sass/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/sass/style.css" />
 
 
     <!-- Import CSS Section -->
@@ -22,7 +21,7 @@
                 <!--Left Itens-->
                 <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
                     <center>
-                        <img src="/images/logo.png" class="toplogo">
+                        <p class="toplogo"></p>
                     </center>
                 </div>
                 <!--Middle Itens-->
