--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!--Left Itens-->
                 <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
                     <center>
-                        <img src="images/logo.png" class="toplogo">
+                        <img src="images/logo.jpg" class="toplogo">
                     </center>
                 </div>
                 <!--Middle Itens-->
