--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">               
                 <div class="col align-self-center">
-                    <h1>Genetic &nbsp &nbsp &nbsp &nbsp &nbsp <br> &nbsp &nbsp &nbsp &nbsp &nbsp Testing</h1>
+                    <p>Genetic &nbsp &nbsp &nbsp &nbsp &nbsp <br> &nbsp &nbsp &nbsp &nbsp &nbsp Testing</p>
                 </div>
             </div>
         </div>
