--- a/index.html
+++ b/index.html
@@ -41,11 +41,25 @@
 
     <!--Top-->
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 top text-center">
-        <div class="container">
+        <div class="container2">
+            <!--Title-->
             <div class="row">               
                 <div class="col align-self-center">
-                    <p>Genetic &nbsp &nbsp &nbsp &nbsp &nbsp <br> &nbsp &nbsp &nbsp &nbsp &nbsp Testing</p>
+                    <h1>Genetic &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
+                    <h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Testing</h1>
                 </div>
+            </div>    
+            <!--Line-->
+            <div class="row">
+                <div class="thinline col align-self-center "></div>
+            </div>
+            <!--Social Medias-->
+            <div class="row">
+                <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 socialtop text-center">
+                    <button type="button" class="col-md-4 col-xs-12 col-sm-12 col-lg-3 btn btn-primary btn-lg"><img src="images/twitter-logo-button.png">&nbsp TWITTER</button>   
+                    <button type="button" class="col-md-4 col-xs-12 col-sm-12 col-lg-3 btn btn-primary btn-lg"><img src="images/github-logo.png" class="isocial">&nbsp GITHUB</button>
+                    <button type="button" class="col-md-4 col-xs-12 col-sm-12 col-lg-3 btn btn-primary btn-lg"><img src="images/linkedin-sign.png" class="isocial">&nbsp LINKEDIN</button>
+                </div>      
             </div>
         </div>
     </div>
