--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 about1">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-xs-8 col-sm-12 col-lg-8">
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
                     <div class="thinlinesmall"></div>
-                </div>   
-            </div>
-            <div class="row">
-                <div class="col-md-7 col-xs-7 col-sm-12 col-lg-7">
                     <h1>Ornare quisque feugiat: <br>
                             blandit eleifend
                     </h1>
@@ -81,7 +77,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan. At elementum eu facilisis sed odio morbi quis commodo odio. Ut porttitor leo a diam sollicitudin tempor id. Netus et malesuada fames ac turpis egestas.
                     </p>
                 </div>
-                <div class="col-md-5 col-xs-5 col-sm-12 col-lg-5">
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
                     <img src="images/whitebaby.jpg">
                 </div>
             </div>
@@ -91,17 +87,12 @@
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 about2">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-xs-8 col-sm-12 col-lg-8">
-                    <div class="thinlinesmall"></div>
-                </div>   
-            </div>
-            <div class="row">
-                <div class="col-md-7 col-xs-7 col-sm-12 col-lg-7">
-                    <img src="images/blackbaby.jpg">
-                    
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
+                    <img src="images/bebe negra.jpg">                    
                 </div>
-                <div class="col-md-5 col-xs-5 col-sm-12 col-lg-5">
-                        <h1>Ornare quisque feugiat: <br>
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
+                    <div class="thinlinesmall"></div>
+                    <h1>Ornare quisque feugiat: <br>
                             blandit eleifend
                     </h1>
                     <p>
@@ -115,12 +106,8 @@
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 about3">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-xs-8 col-sm-12 col-lg-8">
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
                     <div class="thinlinesmall"></div>
-                </div>   
-            </div>
-            <div class="row">
-                <div class="col-md-7 col-xs-7 col-sm-12 col-lg-7">
                     <h1>Ornare quisque feugiat: <br>
                             blandit eleifend
                     </h1>
@@ -128,7 +115,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan. At elementum eu facilisis sed odio morbi quis commodo odio. Ut porttitor leo a diam sollicitudin tempor id. Netus et malesuada fames ac turpis egestas.
                     </p>
                 </div>
-                <div class="col-md-5 col-xs-5 col-sm-12 col-lg-5">
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
                     <img src="images/asianbaby.jpg" id="asianbaby">
                 </div>
             </div>
