Test without JS

--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
         </div>
     </div>
     <hr>
-    
+
+    <!--Test-->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 test">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
+                    <iframe src="eyes.html" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
+                    <div>
+                        <img src="images/bebepadrao olho azul.jpg"> 
+                        <center>
+                            <img src="images/A+.jpg" id="sangue">
+                        </center>
+                    </div>                         
+                </div>
+            </div>
+        </div>
+    </div>  
 </body>
 </html>
