--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Genetic Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="sass/style.css" />
+    <script src="js/script.js"></script>
 
 
     <!-- Import CSS Section -->
@@ -127,19 +128,13 @@
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 test">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
+                <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                     <iframe src="eyes.html" frameborder="0" scrolling="no"></iframe>
                 </div>
-                <div class="col-md-6 col-xs-6 col-sm-12 col-lg-6">
-                    <div>
-                        <img src="images/bebepadrao olho azul.jpg"> 
-                        <center>
-                            <img src="images/A+.jpg" id="sangue">
-                        </center>
-                    </div>                         
-                </div>
+                
             </div>
         </div>
     </div>  
+    <script src="js/script.js"></script>
 </body>
 </html>
