--- a/eyes.html
+++ b/eyes.html
@@ -41,6 +41,30 @@
                         </center>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <h1>Skin Color:</h1>
+                    <div>
+                        <h1 id="features">Mother's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette">
+                        <button type="button" class="btn btn-primary" id="skinblack">
+                    </div>
+                    <div>
+                        <h1 id="features">Father's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca2();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette">
+                        <button type="button" class="btn btn-primary" id="skinblack">
+                    </div>
+                    <a href="blood.html"><button type="button" class="btn btn-secondary">Continue</button></a>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <img src="images/bebepadrao olho azul.jpg" id="baby"> 
+                        <center>
+                            <img src="images/A+.jpg" id="sangue">
+                        </center>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/script.js"></script>
