--- a/index.html
+++ b/index.html
@@ -125,16 +125,56 @@
     <hr>
 
     <!--Test-->
-    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 test">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 iframe">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-                    <iframe src="eyes.html" frameborder="0" scrolling="no"></iframe>
+            <div class="row" id="test">
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <h1>Eyes Color:</h1>
+                    <div>
+                        <h1 id="features">Mother's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="eyeblue" onclick="olhoAzul();">
+                        <button type="button" class="btn btn-primary" id="eyebrown" onclick="olhoCast();">
+                        <button type="button" class="btn btn-primary" id="eyegreen" onclick="olhoVerde();">
+                    </div>
+                    <div>  
+                        <h1 id="features">Father's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="eyeblue1" onclick="olhoAzul2();">
+                        <button type="button" class="btn btn-primary" id="eyebrown1" onclick="olhoCast2();">
+                        <button type="button" class="btn btn-primary" id="eyegreen1" onclick="olhoVerde2();">
+                    </div> 
                 </div>
-                
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <img src="images/bebepadrao olho azul.jpg" id="baby"> 
+                </div>
             </div>
+            <br>
+            <a href="#test2"><button type="button" class="btn btn-secondary" onclick="botao();">Continue</button></a>
+            <br> <br> <br> <hr>
+            <div class="row test2" id="test2">
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <h1>Skin Color:</h1>
+                    <div>
+                        <h1 id="features">Mother's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette" onclick="peleMorena();">
+                        <button type="button" class="btn btn-primary" id="skinblack" onclick="peleNegra();">
+                    </div>
+                    <div>
+                        <h1 id="features">Father's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca2();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette" onclick="peleMorena2();">
+                        <button type="button" class="btn btn-primary" id="skinblack" onclick="peleNegra2();">
+                    </div>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <img src="images/bebepadrao olho azul.jpg" id="baby2"> 
+                </div>
+            </div>
+            <br>
+            <a href="blood.html"><button type="button" class="btn btn-secondary">Continue</button></a>
+            <br> <br> <br> <hr>
         </div>
-    </div>  
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
