--- a/skin.html
+++ b/skin.html
@@ -6,7 +6,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="sass/style.css" />
-    <script src="main.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- Import CSS Section -->
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
@@ -18,28 +18,31 @@
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 iframe">
         <div class="container">
             <div class="row">
-                <h1>Skin Color:</h1>
-            </div>
-            <div class="row">
-                <h1 id="features">Mother's Features:</h1>
-            </div>
-            <div class="row">
-                <button type="button" class="btn btn-primary" id="skinwhite">
-                <button type="button" class="btn btn-primary" id="skinbrunette">
-                <button type="button" class="btn btn-primary" id="skinblack">
-            </div>
-            <div class="row">
-                <h1 id="features">Father's Features:</h1>
-            </div>
-            <div class="row">
-                <button type="button" class="btn btn-primary" id="skinwhite">
-                <button type="button" class="btn btn-primary" id="skinbrunette">
-                <button type="button" class="btn btn-primary" id="skinblack">
-            </div>
-            <div class="row">
-                <a href="blood.html"><button type="button" class="btn btn-secondary">Continue</button></a>
-            </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <h1>Skin Color:</h1>
+                    <div>
+                        <h1 id="features">Mother's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette">
+                        <button type="button" class="btn btn-primary" id="skinblack">
+                    </div>
+                    <div>
+                        <h1 id="features">Father's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="skinwhite" onclick="peleBranca2();">
+                        <button type="button" class="btn btn-primary" id="skinbrunette">
+                        <button type="button" class="btn btn-primary" id="skinblack">
+                    </div>
+                    <a href="blood.html"><button type="button" class="btn btn-secondary">Continue</button></a>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <img src="images/bebepadrao olho azul.jpg" id="baby"> 
+                        <center>
+                            <img src="images/A+.jpg" id="sangue">
+                        </center>
+                </div>
+            </div>    
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
