--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
                         <button type="button" class="btn btn-primary" id="eyegreen1" onclick="olhoVerde2();">
                     </div> 
                 </div>
-                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
-                    <img src="images/bebepadrao olho azul.jpg" id="baby"> 
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                    <img src="" id="baby"> 
                 </div>
+                <a href="#test2"><button type="button" id="continue" class="btn btn-secondary" onclick="display();">Continue</button></a>
             </div>
             <br>
-            <a href="#test2"><button type="button" class="btn btn-secondary" onclick="botao();">Continue</button></a>
-            <br> <br> <br> <hr>
+            <hr>
             <div class="row test2" id="test2">
                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
                     <h1>Skin Color:</h1>
@@ -169,10 +169,42 @@
                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
                     <img src="images/bebepadrao olho azul.jpg" id="baby2"> 
                 </div>
+                <br>
+                <a href="#test3"><button type="button" id="continue" class="btn btn-secondary" onclick="display2();">Continue</button></a> 
             </div>
-            <br>
-            <a href="blood.html"><button type="button" class="btn btn-secondary">Continue</button></a>
-            <br> <br> <br> <hr>
+            <hr>
+            <div class="row test2" id="test3">
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
+                    <h1>Blood Type:</h1>
+                    <div>
+                        <h1 id="features">Mother's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="ap" onclick="sangueAp();">
+                        <button type="button" class="btn btn-primary" id="a-" onclick="sangueAn();">
+                        <button type="button" class="btn btn-primary" id="bp" onclick="sangueBp();">
+                        <button type="button" class="btn btn-primary" id="b-" onclick="sangueBn();">
+                        <button type="button" class="btn btn-primary" id="abp" onclick="sangueABp();">
+                        <button type="button" class="btn btn-primary" id="ab-" onclick="sangueABn();">
+                        <button type="button" class="btn btn-primary" id="op" onclick="sangueOp();">
+                        <button type="button" class="btn btn-primary" id="o-" onclick="sangueOn();">
+                    </div>
+                    <div>
+                        <h1 id="features">Father's Features:</h1>
+                        <button type="button" class="btn btn-primary" id="ap" onclick="sangueAp2();">
+                        <button type="button" class="btn btn-primary" id="a-">
+                        <button type="button" class="btn btn-primary" id="bp">
+                        <button type="button" class="btn btn-primary" id="b-">
+                        <button type="button" class="btn btn-primary" id="abp">
+                        <button type="button" class="btn btn-primary" id="ab-">
+                        <button type="button" class="btn btn-primary" id="op">
+                        <button type="button" class="btn btn-primary" id="o-">
+                    </div>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center align-self-center">
+                    <h4>Your baby:</h4>
+                    <img src="" id="sangue"> 
+                </div>
+                <a href="#test"><button type="button" id="continue" class="btn btn-secondary" onclick="display3();">Restart</button></a>
+            </div>
         </div>
     </div>
     <script src="js/script.js"></script>
